# IR-crawling

./: .gitignore  Dockerfile  Pipfile  classifier_for_rust.py  crawl_wiki.py  extract_domains.py  ideas  mk_csv_ds.py  mk_dataset.py  run_classifier_exps.zsh  setup.py  testAggregatedClassifier.py  testCombinedClassifier.py  testContextClassifier.py  testUrlClassifier.py  train.py  train_classifier.py  train_context_classifier.py
ignore/: analyze_debug_data.ipynb
rust_crawl/: Cargo.toml  test.html  tmptmp.py  todos
rust_crawl/src/: main.rs  prio_que.rs  utils.rs
rust_crawl/src/crawler/: config.rs  data_structs.rs  mod.rs  state.rs
url_classifier/: __init__.py  combined_classifier.py  content_url_classifier.py  context_classifier.py  feature_extractors.py  main.py  run_exps.zsh  rust_functions.py  url_classifier.py
