[package]
name = "rust_crawl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
crossbeam = "0.8.1"
dashmap = {version="4.0.2", features=["serde"]}
parking_lot = {version="0.11.2", features=["serde"]}
rayon = "1.5.1"
regex = "1.5.4"
reqwest = { version = "0.11.5", features = ["blocking"] }
scraper = "0.12.0"
select = "0.5.0"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.68"
static_init = "1.0.1"
url = "2.2.2"
