[features]
default = []
blocking_requests = []

[package]
edition = "2021"
name = "rust_crawl"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-scoped = {version = "0.7.0", features = ["use-tokio"]}
bincode = "1.3.3"
crossbeam = "0.8.1"
ctrlc = "3.2.1"
dashmap = {version = "4.0.2", features = ["serde"]}
flexbuffers = "2.0.0"
fs_extra = "1.2.0"
http = "0.2.5"
hyper = "0.14.13"
num_cpus = "1.13.0"
parking_lot = {version = "0.11.2", features = ["serde"]}
public-ip = "0.2.1"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
reqwest = {version = "0.11.6", features = ["blocking"]}
rmp-serde = "0.15.5"
ron = "0.7.0"
scraper = "0.12.0"
select = "0.5.0"
serde = {version = "1.0.130", features = ["derive", "rc"]}
serde-pickle = "1.1.0"
serde_json = "1.0.68"
static_init = "1.0.1"
structopt = "0.3.25"
tokio = { version = "1.12.0", features = ["full"] }
# tokio = "1.12.0"
url = "2.2.2"
pyo3 = {version = "0.15.0", features = ["auto-initialize"]}
lingua = "1.3.2"
itertools = "0.10.1"
